--- a/src/Component/Card/PropertyCard.css
+++ b/src/Component/Card/PropertyCard.css
@@ -18,6 +18,13 @@
     gap: 30px;
 }
 
+.banner{
+    width: 100%;
+    height: 400px;
+    object-fit:cover;
+    
+}
+
 .location{
     margin-bottom: 10px;
 }
