--- a/src/Component/Card/PropertyCard.css
+++ b/src/Component/Card/PropertyCard.css
@@ -3,14 +3,14 @@
     flex-wrap: wrap;
     gap: 20px;
     padding: 60px;
-    background-color:rgb(161, 200, 235);
-    
+   
+   
 }
 
 .card{
-    padding: 20px;
+    padding: 15px;
     text-align: left;
-    
+    height: max-content;
 }
 
 .card-head{
@@ -29,4 +29,102 @@
 
 .location{
     margin-bottom: 10px;
+}
+
+.sub1{
+    width: 20%;
+    background-color: bisque;
+    height:fit-content;
+}
+.sub2{
+    width: 70%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    
+}
+
+.location-filter,.price-filter{
+    padding: 20px;
+}
+
+.list{
+    display: flex;
+    gap: 10px;
+    margin-bottom: 5px;
+}
+
+@media all and (max-width : 615px) {
+    .card-container{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+       
+    }
+    .sub1{
+        width: 80%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+       
+    }
+
+    .card{
+        display: flex;
+        flex-direction: column;
+       
+    }
+
+    .card-head,.card-btns{
+        
+        display: flex;
+        flex-direction: column;
+        
+    }
+}
+
+@media all and (max-width : 850px){
+    .card-container{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+       
+    }
+
+    .sub1{
+        width: 80%;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .sub2{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    
+}
+
+@media all and (max-width : 1030px){
+    .card-container{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+       
+    }
+
+    .sub1{
+        width: 80%;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .sub2{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    
 }
